include_directories("${PROJECT_SOURCE_DIR}/util")
include_directories("${PROJECT_SOURCE_DIR}/bson")
include_directories("${PROJECT_SOURCE_DIR}/cache")
include_directories("${PROJECT_SOURCE_DIR}/filesystem")
include_directories("${PROJECT_SOURCE_DIR}/db")
include_directories("${PROJECT_SOURCE_DIR}/tx")
include_directories("${PROJECT_SOURCE_DIR}/command")
include_directories("${PROJECT_SOURCE_DIR}/network")

IF (NOT WIN32)
	add_library(djon-client SHARED djondbconnection.cpp djondbconnectionmanager.cpp)
ENDIF (NOT WIN32)
IF (WIN32)
	add_library(djon-client djondbconnection.cpp djondbconnectionmanager.cpp)
ENDIF (WIN32)

install (TARGETS djon-client DESTINATION lib)
install (FILES djondb_client.h DESTINATION include)

target_link_libraries (djon-client djon-network djon-command djon-tx djon-db djon-filesystem djon-cache djon-bson djon-util)
